--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,18 @@ body {
 	font-family: Arial-BoldMT;
 	background: #FFFFFF;
 	overflow: hidden;	
+	height: 100%;
 }
 
 * {
 	padding: 0;
 	margin: 0;
-
 }
 
 .header {
 	top: 0;
 	width: 100%;
-	height: 93px;
+	height: 80px;
 	/*background-color: #7FFFD4;*/
 	padding: 0;
 	margin: 0;
@@ -23,9 +23,11 @@ body {
 
 .logo {
 	position: absolute;
-	margin-top: 25px;
+	margin-top: 19px;
 	margin-left: 40px;
 	float: left;
+	height: 27px;
+	width: 108px;
 	/*padding: 10%;*/
 	/*display: flex;*/
 }
@@ -44,7 +46,7 @@ a {
 
 .header__menu__item {
 	position: relative;
-	top: 25px;
+	top: 20px;
 	left: 200px;
 	display: inline-block;
 	float: left;
@@ -61,6 +63,47 @@ a {
 }
 
 
+.header__menu__button  {
+	display: none;
+	width: 50px;
+    height: 50px;
+    position: relative;
+    float: right;
+    position: relative;  
+    margin-top: 13px;
+    margin-right: 20px;
+}
+
+
+
+.header__menu__button span,
+.header__menu__button span::before,
+.header__menu__button span::after {
+  position: absolute;
+  top: 50%; margin-top: -1px;
+  left: 50%; margin-left: -10px;
+  width: 20px;
+  height: 2.5px;
+  background-color: #222;
+  border-radius: 20%;
+}
+.header__menu__button span::before,
+.header__menu__button span::after {
+  content: '';
+  display: block;
+  transition: 1s;
+}
+.header__menu__button span::before {
+  transform: translateY(-6px);
+}
+.header__menu__button span::after {
+  transform: translateY(6px);
+}
+
+
+
+
+
 .line {
 	width: 100%;
 	border: none; /* Убираем границу для браузера Firefox */
@@ -72,7 +115,7 @@ a {
 
 
 .footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 64px;
@@ -82,7 +125,8 @@ a {
 	color: #858585;
 	letter-spacing: 0.01px;
 	text-align: left;
-	min-width: 750px;
+	min-width: 800px;
+	/*min-height: 20%;*/
 
 }
 
@@ -109,4 +153,245 @@ a {
 	margin: 22px 36px 27px 0px;
 	position: relative;
 }
+
+
+
+
+
+.main {
+	margin-top: 35px;
+	margin-left: 40px;
+	width: 50%;
+	color: #333333;
+}
+
+
+.main__header {
+	font-size: 18px;
+	margin: 20px 0;
+
+}
+
+.main__block {
+	background-image: url('img/bg@1x.png');
+	width: 630px;
+	height: 331px;
+	/*min-width: 630px;*/
+}
+
+.main__block__left {
+	padding-top: 20px;
+	padding-left: 30px;
+	float: left;
+}
+
+
+.main__block__hello {
+	font-size: 27px;
+	width: 100%;
+	height: 30px;
+	margin: 5px 0;
+	line-height: 31px;
+}
+
+.main__block__state {
+	font-family: ArialMT;
+	font-size: 14px;
+	width: 360px;
+	height: 16px;
+}
+
+
+.main__block__temperature{
+	text-decoration: none;
+	margin: 25px 0;
+
+}
+
+.main__block__temperature__item{
+	display: inline-block;
+	font-family: ArialMT;
+	font-size: 14px;
+	color: #858585;
+	margin-right: 5px;
+}
+
+
+.main__block__temperature__item span{
+	font-family: Arial-BoldMT;
+	font-size: 36px;
+	color: #333333;
+	letter-spacing: 0;
+	text-align: left;
+	margin: 9px 0px;
+	margin-right: 10px;
+}
+
+
+
+.main__block__right {
+	float: right;
+	position: relative;
+	width: 210px;
+	max-height: 331px;
+	right: 0;
+
+}
+
+.main__block__scripts {
+	text-decoration: none;
+	position: relative;
+	right: 12px;	
+	max-height: 331px;
+	overflow-y: scroll;
+
+}
+
+.main__block__scripts__item {
+	width: 200px;
+	height: 120px;
+	margin-top: 19px;
+	display: inline-block;
+	background: #F7F7F7;
+	border-radius: 20px;
+
+	position:relative;
+
+}
+
+.main__block__scripts__item__content {
+	margin-top: 15px;
+	margin-left: 15px;
+}
+
+.main__block__scripts__item__content__text {
+	position: absolute;
+	bottom: 0;
+}
+
+
+.main__block__scripts__item__name {
+	font-family: Arial-BoldMT;
+	font-size: 14px;
+	color: #333333;
+	letter-spacing: 0;
+	text-align: left;
+	width: 170px;
+	margin-bottom: 7px;
+	white-space: pre-line;
+}
+
+.main__block__scripts__item__describe {
+	font-family: ArialMT;
+	font-size: 12px;
+	color: #858585;
+	letter-spacing: 0;
+	text-align: left;
+	margin-bottom: 15px;
+}
+
+
+.main__block__scripts__item__next {
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	margin-top: 23px;
+
+}
+
+
+
+@media (max-width: 992px){
+
+}
+
+@media (max-width: 560px){
+
+
+	.header__menu__item, .main__header, .line {
+		display: none;  
+        height: auto; 
+	}
+
+	.header__menu__button {
+	  display: block;
+	}
+
+	.logo, .main, .footer__menu {
+		margin-left: 20px;
+		/*margin-right: 20px;*/
+	}
+	
+	.main {
+		width: 90%;
+		margin-top: 0px;
+	}
+
+	.main__block {
+		width: 100%;
+		border-radius: 20px;
+		height: 300px;
+
+	}
+
+
+	.main__block__hello {
+		font-size: 18px;
+	}
+
+	.main__block__state {
+		font-size: 12px;
+	}
+
+	.main__block__temperature__item {
+		font-size: 12px;
+	}
+	
+	.main__block__temperature__item span {
+		font-size: 24px;
+	}
+
+	.main__block__temperature__item img {
+		width: 20px;
+		position: relative;
+		top: 2px;
+		left: -4px;
+	}
+
+	.main__block__right {
+		float: left;
+		position: relative;
+		/*padding: 10px 0px;*/
+		width: 100%;
+		height: 150px;
+		max-height: 150px;
+	}
+
+	.main__block__scripts {
+		left: 0px;
+		top: 0px;
+		text-decoration: none;
+
+		height: 150px;
+		max-height: 150px;
+		/*max-width: 440px;	*/
+		position: relative;
+		max-width: 100%;
+		overflow: hidden;
+		overflow-x: scroll;
+		white-space: nowrap;
+
+	}
+	
+	.main__block__scripts__item {
+		margin-top: -10px;
+		margin-left: 20px;
+
+		display: inline-block;
+		position:relative;
+
+	}
+
+}
+
 
